kubernetes/apps/kube-system/kyverno/policies/add-authentik-ingress-annotations.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kyverno.io/clusterpolicy_v1.json
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-authentik-ingress-annotations
  annotations:
    policies.kyverno.io/title: Authentik ingress annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates auth annotations on ingresses. When
      the `authentik.home.arpa/internal` annotation is `true` it
      applies the nginx auth annotations for use with Authentik internally.
      When the `authentik.home.arpa/external` annotation is `true` it
      applies the nginx auth annotations for use with Authentik externally.
spec:
  generateExisting: true
  rules:
    - name: auth-internal
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                authentik.home.arpa/internal: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(nginx.ingress.kubernetes.io/proxy-body-size): |-
                1000M
              +(nginx.ingress.kubernetes.io/auth-url): |-
                http://ak-outpost-internal.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
              +(nginx.ingress.kubernetes.io/auth-signin): |-
                /outpost.goauthentik.io/start?rd=$escaped_request_uri
              +(nginx.ingress.kubernetes.io/auth-response-headers): |-
                Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid,authorization
              +(nginx.ingress.kubernetes.io/auth-snippet): |-
                proxy_set_header X-Forwarded-Host $http_host;
    - name: auth-external
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                authentik.home.arpa/external: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(nginx.ingress.kubernetes.io/proxy-body-size): |-
                1000M
              +(nginx.ingress.kubernetes.io/auth-url): |-
                http://ak-outpost-external.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
              +(nginx.ingress.kubernetes.io/auth-signin): |-
                /outpost.goauthentik.io/start?rd=$escaped_request_uri
              +(nginx.ingress.kubernetes.io/auth-response-headers): |-
                Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid,authorization
              +(nginx.ingress.kubernetes.io/auth-snippet): |-
                proxy_set_header X-Forwarded-Host $http_host;
